--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "body-parser": "^1.15.2",
     "cookie-parser": "~1.3.5",
     "express": "~4.13.3",
     "express-session": "~1.11.3",
